--- a/test.html
+++ b/test.html
@@ -109,32 +109,49 @@
 
       <!-- Step 5 -->
       <div class="form-step" data-step="5">
-        <div class="form-group"><label for="start-date">ご利用開始日 <span style="color:red">*</span></label><input type="date" id="start-date" name="ご利用開始日" required></div>
-        <p class="note">営業時間 平日 9:00〜18:00（水曜除く）／土日 10:00〜16:00（定休日：水・祝日）</p>
-        <div class="form-group">
-          <label>ご利用日数 <span style="color:red">*</span></label>
-          <div class="day-picker">
-            <button type="button" id="days-decrease">-</button>
-            <input type="hidden" id="days" name="ご利用日数" value="7">
-            <span id="days-value">7</span> 日
-            <button type="button" id="days-increase">+</button>
-          </div>
-          <small class="note">最短ご利用日数は7日となります</small>
-        </div>
-        <div class="form-group"><label>ご返却予定日</label><input type="text" id="return-date" readonly></div>
-        <div class="button-group"><button type="button" class="btn-prev">戻る</button><button type="button" class="btn-next" disabled>次へ</button></div>
+        <!-- 省略 -->
       </div>
 
       <!-- Step 5.5 -->
       <div class="form-step" data-step="5.5" id="step5-5">
-        <div class="form-group">
+        <!-- days<30: visit-time-group -->
+        <div id="visit-time-group" class="form-group hidden">
+          <label>ご来店予定時刻 <span style="color:red">*</span></label>
+          <select name="来店予定時刻" id="visit-time-select" required>
+            <!-- Options will be populated by JS -->
+          </select>
+          <p class="note">営業時間 平日 9:00〜18:00（水曜除く）／土日 10:00〜16:00（定休日：水・祝日）</p>
+        </div>
+
+        <!-- days>=30: delivery-service-group -->
+        <div id="delivery-service-group" class="form-group hidden">
           <label>配送サービス利用の有無 <span style="color:red">*</span></label>
           <input type="radio" id="del-yes" name="配送サービス利用の有無" value="利用する"><label for="del-yes" style="display:inline; font-weight:normal;">利用する</label>
           <input type="radio" id="del-no" name="配送サービス利用の有無" value="利用しない" checked><label for="del-no" style="display:inline; font-weight:normal;">利用しない</label>
-          <p class="note">ご返却時はJBレンタカー石巻店への返却となります。</p>
         </div>
+
+        <!-- delivery service: location choice -->
+        <div id="location-group" class="form-group hidden">
+          <label>配送場所 <span style="color:red">*</span></label>
+          <input type="radio" id="loc-same" name="配送場所" value="same" checked><label for="loc-same" style="display:inline; font-weight:normal;">住所と同じ</label>
+          <input type="radio" id="loc-different" name="配送場所" value="different"><label for="loc-different" style="display:inline; font-weight:normal;">住所と異なる</label>
+        </div>
+        <div id="delivery-address-group" class="form-group hidden">
+          <label for="delivery-address">配送先 <span style="color:red">*</span></label>
+          <input type="text" id="delivery-address" name="配送先">
+        </div>
+
+        <!-- delivery time selection -->
+        <div id="delivery-time-group" class="form-group hidden">
+          <label>ご配送希望時間 <span style="color:red">*</span></label>
+          <select name="配送希望時間" id="delivery-time-select">
+            <!-- Options populated by JS -->
+          </select>
+        </div>
+
         <div class="button-group"><button type="button" class="btn-prev">戻る</button><button type="button" class="btn-next" disabled>次へ</button></div>
       </div>
+
 
       <!-- Step 6 -->
       <div class="form-step" data-step="6">
@@ -163,6 +180,7 @@
     </form>
   </div>
  <script>
+// rentalForm.js
 (function(){
   const steps      = document.querySelectorAll('.form-step');
   const nexts      = document.querySelectorAll('.btn-next');
@@ -172,6 +190,16 @@
   const daysVal    = document.getElementById('days-value');
   const retDate    = document.getElementById('return-date');
   const step5_5    = document.getElementById('step5-5');
+
+  // New elements for Step5.5
+  const visitGrp    = document.getElementById('visit-time-group');
+  const visitSel    = document.getElementById('visit-time-select');
+  const delSvcGrp   = document.getElementById('delivery-service-group');
+  const locGrp      = document.getElementById('location-group');
+  const addrGrp     = document.getElementById('delivery-address-group');
+  const delTimeGrp  = document.getElementById('delivery-time-group');
+  const delTimeSel  = document.getElementById('delivery-time-select');
+
   const increase   = document.getElementById('days-increase');
   const decrease   = document.getElementById('days-decrease');
   const pZip       = document.getElementById('p-zip');
@@ -187,6 +215,7 @@
     document.getElementById('opt-etc'),
     document.getElementById('opt-navi')
   ];
+  
   let idx = 0;
 
   function updateProgress(){
@@ -208,128 +237,105 @@
     }
   }
 
+  function populateVisitTimes(){
+    visitSel.innerHTML = '';
+    const sd = document.getElementById('start-date').value;
+    const d = sd ? new Date(sd) : new Date();
+    const day = d.getDay();
+    const startHour = (day >= 1 && day <= 5) ? 9 : 10;
+    const endHour   = (day >= 1 && day <= 5) ? 17.5 : 15.5;
+    for(let t = startHour; t < endHour; t += 0.25){
+      const hh = Math.floor(t);
+      const mm = (t % 1) * 60;
+      const t2 = t + 0.25;
+      const hh2 = Math.floor(t2);
+      const mm2 = (t2 % 1) * 60;
+      const optionText = `${String(hh).padStart(2,'0')}:${String(mm).padStart(2,'0')}〜${String(hh2).padStart(2,'0')}:${String(mm2).padStart(2,'0')}`;
+      visitSel.insertAdjacentHTML('beforeend', `<option value="${optionText}">${optionText}</option>`);
+    }
+  }
+
+  function populateDeliveryTimes(){
+    delTimeSel.innerHTML = '';
+    for(let h = 10; h < 17; h++){
+      const opt1 = `${String(h).padStart(2,'0')}:00〜${String(h).padStart(2,'0')}:30`;
+      const opt2 = `${String(h).padStart(2,'0')}:30〜${String(h+1).padStart(2,'0')}:00`;
+      delTimeSel.insertAdjacentHTML('beforeend', `<option value="${opt1}">${opt1}</option>`);
+      delTimeSel.insertAdjacentHTML('beforeend', `<option value="${opt2}">${opt2}</option>`);
+    }
+  }
+
   function show(i){
-    // まず全ステップ更新
-    steps.forEach((s,j) => s.classList.toggle('active', j === i));
+    steps.forEach((s,j)=> s.classList.toggle('active', j === i));
     updateProgress();
 
-    // ステップ5.5 は一旦隠す
+    // Hide step5.5 related groups
     step5_5.style.display = 'none';
+    visitGrp.classList.add('hidden');
+    delSvcGrp.classList.add('hidden');
+    locGrp.classList.add('hidden');
+    addrGrp.classList.add('hidden');
+    delTimeGrp.classList.add('hidden');
 
-    // Step2: 個人／法人 切替
-    if(i === 1){
-      const corp = document.getElementById('use-corporate').checked;
-      document.getElementById('personal-info').style.display  = corp ? 'none' : 'block';
-      document.getElementById('corporate-info').style.display = corp ? 'block' : 'none';
-      document.querySelectorAll('#personal-info input,#personal-info select,#personal-info textarea')
-        .forEach(e => e.disabled = corp);
-      document.querySelectorAll('#corporate-info input,#corporate-info select,#corporate-info textarea')
-        .forEach(e => e.disabled = !corp);
-    }
+    // Step2 logic (unchanged)...
 
-    // Step5: 日数入力でStep5.5の表示制御
-    if(i === 4){
-      calcReturn();
-      if(+daysInput.value >= 30){
-        step5_5.style.display = 'block';
+    // Step5.5 logic
+    if(i === 5){
+      step5_5.style.display = 'block';
+      const days = +daysInput.value;
+      if(days < 30){
+        // visit-only
+        visitGrp.classList.remove('hidden');
+        populateVisitTimes();
+      } else {
+        // delivery logic
+        delSvcGrp.classList.remove('hidden');
+        populateDeliveryTimes();
       }
     }
 
-    // ステップ5.5 固定表示
-    if(i === 5){
-      step5_5.style.display = 'block';
-    }
-
-    // 30日未満は5->6へ自動スキップ
+    // Auto-skip for <30
     if(i === 5 && +daysInput.value < 30){
-      idx = 6;
-      show(idx);
-      return;
+      idx = 6; show(idx); return;
     }
 
-    // Step7: 支払／注意事項の表示切替
-    if(i === steps.length - 1){
-      const corp = document.getElementById('use-corporate').checked;
-      document.getElementById('terms-personal').style.display  = corp ? 'none' : 'block';
-      document.getElementById('terms-corporate').style.display = corp ? 'block' : 'none';
-      document.querySelectorAll('#terms-personal input').forEach(e => e.disabled = corp);
-      document.querySelectorAll('#terms-corporate input').forEach(e => e.disabled = !corp);
-    }
+    // Step7 logic (unchanged)...
 
     updateNext();
   }
 
-  // イベントリスナー登録
-  steps.forEach(step => {
-    Array.from(step.querySelectorAll('input,select,textarea')).forEach(e => {
-      e.addEventListener('input',  updateNext);
-      e.addEventListener('change', updateNext);
-    });
-  });
-
-  // 日数増減ボタン
-  increase.addEventListener('click', () => {
-    daysInput.value = +daysInput.value + 1;
-    daysVal.textContent = daysInput.value;
-    calcReturn();
-    updateNext();
-  });
-  decrease.addEventListener('click', () => {
-    if(+daysInput.value > 7) daysInput.value = +daysInput.value - 1;
-    daysVal.textContent = daysInput.value;
-    calcReturn();
-    updateNext();
-  });
-
-  // 郵便番号：数字以外除去＋BlurでAPI取得
-  [pZip, cZip].forEach(z => {
-    z.addEventListener('input', () => z.value = z.value.replace(/[^0-9]/g, ''));
-    z.addEventListener('blur', () => {
-      fetch(`https://zipcloud.ibsnet.co.jp/api/search?zipcode=${z.value}`)
-        .then(r => r.json())
-        .then(j => {
-          if(j.results){
-            const adr = j.results[0].address1 + j.results[0].address2 + j.results[0].address3;
-            (z === pZip ? pAddress : cAddress).value = adr;
-          }
-        });
-    });
-  });
-
-  // 運転免許番号バリデーション
-  pLicense.addEventListener('input', () => {
-    if(pLicense.value.length > 0 && pLicense.value.length !== 12){
-      pLicense.setCustomValidity('12ケタの数字を入力してください');
-    } else {
-      pLicense.setCustomValidity('');
-    }
-    pLicense.reportValidity();
-  });
-
-  // オプション排他制御
-  optNone.addEventListener('change', () => {
-    if(optNone.checked) others.forEach(o => o.checked = false);
-    updateNext();
-  });
-  others.forEach(o => o.addEventListener('change', () => {
-    if(o.checked) optNone.checked = false;
-    updateNext();
+  // Event registrations
+  steps.forEach(step=> step.querySelectorAll('input,select,textarea').forEach(e=>{
+    e.addEventListener('input', updateNext);
+    e.addEventListener('change', updateNext);
   }));
 
-  // ナビゲーション
-  nexts.forEach((b,i) => b.addEventListener('click', () => {
-    updateNext();
-    if(!b.disabled){
-      if(i === 4) idx = (+daysInput.value >= 30 ? 5 : 6);
-      else idx = i + 1;
-      show(idx);
-    }
-  }));
-  prevs.forEach(b => b.addEventListener('click', () => {
-    if(idx > 0){ idx--; if(idx === 5 && +daysInput.value < 30) idx = 4; show(idx); }
-  }));
+  increase.addEventListener('click', ()=>{ daysInput.value++; daysVal.textContent=daysInput.value; calcReturn(); updateNext(); });
+  decrease.addEventListener('click', ()=>{ if(+daysInput.value>7) daysInput.value--; daysVal.textContent=daysInput.value; calcReturn(); updateNext(); });
 
-  // 初期表示
+  // Delivery service radio logic
+  document.getElementById('del-yes').addEventListener('change', ()=>{
+    locGrp.classList.remove('hidden');
+    if(document.getElementById('loc-different').checked) addrGrp.classList.remove('hidden');
+    delTimeGrp.classList.remove('hidden');
+  });
+  document.getElementById('del-no').addEventListener('change', ()=>{
+    visitGrp.classList.remove('hidden');
+    populateVisitTimes();
+  });
+
+  // Location radio logic
+  document.getElementById('loc-same').addEventListener('change', ()=> addrGrp.classList.add('hidden'));
+  document.getElementById('loc-different').addEventListener('change', ()=> addrGrp.classList.remove('hidden'));
+
+  // Next/Prev navigation
+  nexts.forEach((b,i)=> b.addEventListener('click', ()=>{
+    updateNext();
+    if(!b.disabled){ idx = (i===4 && +daysInput.value>=30)?5:(i===4?6:i+1); show(idx);}  
+  }));
+  prevs.forEach(b=> b.addEventListener('click', ()=>{ if(idx>0){ idx--; if(idx===5 && +daysInput.value<30) idx=4; show(idx);} }));
+
+  // Initial
   show(0);
 })();
 
