--- a/test.html
+++ b/test.html
@@ -108,9 +108,26 @@
       </div>
 
       <!-- Step 5 -->
-      <div class="form-step" data-step="5">
-        <!-- 省略 -->
-      </div>
+<div class="form-step" data-step="5">
+  <div class="form-group">
+    <label for="start-date">ご利用開始日 *</label>
+    <input type="date" id="start-date" name="ご利用開始日" required>
+  </div>
+  <div class="day-picker">
+    <button type="button" id="days-decrease">-</button>
+    <input type="hidden" id="days" name="ご利用日数" value="30">
+    <span id="days-value">30</span> 日
+    <button type="button" id="days-increase">+</button>
+  </div>
+  <div class="form-group">
+    <label>ご返却予定日</label>
+    <input type="text" id="return-date" readonly>
+  </div>
+  <div class="button-group">
+    <button type="button" class="btn-prev">戻る</button>
+    <button type="button" class="btn-next" disabled>次へ</button>
+  </div>
+</div>
 
       <!-- Step 5.5 -->
       <div class="form-step" data-step="5.5" id="step5-5">
